--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "FASTEST SPAM BOT",
-  "description": "A POWERFULL AND FAST SPAM BOT.ONE TIME TRY IT MADE BY DEVIL OP.",
+  "name": "LEGENDSPAM",
+  "description": "A smoothest and fastet spam bot made By @Legend_Mr_Hacker.",
   "logo": "https://telegra.ph/file/35c286ac32e218bd2f535.jpg",
     "env": {
       "STRING": {
