--- a/.github/workflows/im.yml
+++ b/.github/workflows/im.yml
@@ -18,7 +18,7 @@ jobs:
 
         with:
 
-          find: "@CYBER_HUNTERS_OFFICIAL"
+          find: "@DEADLY_USERBOT"
 
           replace: "@Legend_Userbot"
 
