--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "LEGENDSPAM",
+  "name": "Good",
   "description": "A smoothest and fastet spam bot made By @Legend_Mr_Hacker.",
   "logo": "",
     "env": {
