--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Good",
-  "description": "A smoothest and fastet spam bot made By @Legend_Mr_Hacker.",
+  "name": "Inviteall",
+  "description": "Accha H LegendBoy.",
   "logo": "",
     "env": {
       "STRING": {
