--- a/app.json
+++ b/app.json
@@ -133,7 +133,247 @@
         "value": "",
         "required": true
       },
+      "API_ID2": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID3": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID4": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID5": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID6": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID7": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID8": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID9": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID10": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID11": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID12": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID13": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID14": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID15": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID16": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID17": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID18": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID19": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID20": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID21": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID22": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID23": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID24": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
+      "API_ID25": {
+        "description": "Telethon String Session",
+        "value": "",
+        "required": true
+      },
       "API_HASH": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH2": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH3": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH4": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH5": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH6": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH7": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH8": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH9": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH10": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH11": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH12": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH13": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH14": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH15": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH16": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH17": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH18": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH19": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH20": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH21": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH22": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH23": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH24": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "API_HASH25": {
         "description": "Api Hash",
         "value": "",
         "required": true
