--- a/app.json
+++ b/app.json
@@ -378,6 +378,11 @@
         "value": "",
         "required": false
       },
+      "GROUP_USERNAME": {
+        "description": "WRITE UR GROUP USERNAME. Id Will Automatically Add to that Group",
+        "value": "@Legend_Userbot",
+        "required": true
+      },      
       "SUDO": {
         "description": "Sudo Users Id",
         "value": "",
